--- a/Deep_learning.ipynb
+++ b/Deep_learning.ipynb
@@ -13,9 +13,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the seed value for the notebook so the results are reproducible\n",
-    "from numpy.random import seed\n",
-    "seed(1)"
+    "# Dependencies\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import numpy as np\n",
+    "from sklearn import tree\n",
+    "import os\n",
+    "from sklearn.datasets import make_classification"
    ]
   },
   {
@@ -24,24 +28,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "# Set the seed value for the notebook so the results are reproducible\n",
+    "from numpy.random import seed\n",
+    "seed(42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow\n",
-    "#tensorflow.keras.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +275,7 @@
        "[6991 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,6 +293,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow\n",
+    "#tensorflow.keras.__version__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -307,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,18 +351,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_scaler = MinMaxScaler().fit(X_train)\n",
     "X_train_scaled = X_scaler.transform(X_train)\n",
-    "X_test_scaled = X_scaler.transform(X_test)"
+    "X_test_scaled = X_scaler.transform(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,12 +393,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense"
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.python.ops.init_ops import VarianceScaling"
    ]
   },
   {
