--- a/Grid_Search.ipynb
+++ b/Grid_Search.ipynb
@@ -840,19 +840,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "CANDIDATE: Label = 0\n",
-    "\n",
-    "CONFIRMED: Label = 1\n",
-    "\n",
-    "FALSE POSITIVE: Label = 2\n",
-    "\n",
-    "Source: GridSearchCV"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -890,11 +877,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test Data was taken from the first row:\n",
+    "<b>Label asignments</b>\n",
+    "* CANDIDATE: Label = 0\n",
+    "* CONFIRMED: Label = 1\n",
+    "* FALSE POSITIVE: Label = 2\n",
     "\n",
-    "[0, 0, 0, 25.8, 2.83, 0, 0.11600, -0.19, 0.32, -0.11600]\n",
-    "\n",
-    "Class = 1"
+    "<b>Test Data was taken from the first row:</b>\n",
+    "* [0, 0, 0, 25.8, 2.83, 0, 0.11600, -0.19, 0.32, -0.11600]\n",
+    "* Correct answer: Class = 1"
    ]
   },
   {
