--- a/Random_Forest_Decision_Tree.ipynb
+++ b/Random_Forest_Decision_Tree.ipynb
@@ -457,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8884439359267735"
+       "0.8861556064073226"
       ]
      },
      "execution_count": 5,
@@ -474,22 +474,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Acc: 0.886\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Test Acc: %.3f' % rf.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                precision    recall  f1-score   support\n",
+      "\n",
+      "     CANDIDATE       0.80      0.73      0.76       411\n",
+      "     CONFIRMED       0.79      0.83      0.81       484\n",
+      "FALSE POSITIVE       0.98      1.00      0.99       853\n",
+      "\n",
+      "      accuracy                           0.89      1748\n",
+      "     macro avg       0.86      0.85      0.85      1748\n",
+      "  weighted avg       0.88      0.89      0.88      1748\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make predictions with the hypertuned model\n",
+    "predictions = rf.predict(X_test)\n",
+    "\n",
+    "# Calculate classification report\n",
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_test, predictions,\n",
+    "                            target_names=[\"CANDIDATE\", \"CONFIRMED\", \"FALSE POSITIVE\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.15655133952606234, 'koi_fpflag_nt'),\n",
-       " (0.15415041908277194, 'koi_fpflag_co'),\n",
-       " (0.13078084725913797, 'koi_model_snr'),\n",
-       " (0.10909658674390439, 'koi_prad'),\n",
-       " (0.09448829923048889, 'koi_fpflag_ss'),\n",
-       " (0.0790777454310819, 'koi_duration_err1'),\n",
-       " (0.07866611966821507, 'koi_duration_err2'),\n",
-       " (0.07545536402341671, 'koi_prad_err2'),\n",
-       " (0.06721055926059641, 'koi_prad_err1'),\n",
-       " (0.05452271977432439, 'koi_fpflag_ec')]"
+       "[(0.1580548820529976, 'koi_fpflag_nt'),\n",
+       " (0.15279269183836053, 'koi_fpflag_co'),\n",
+       " (0.12124456822011133, 'koi_model_snr'),\n",
+       " (0.10666495258635074, 'koi_prad'),\n",
+       " (0.10661524213845672, 'koi_fpflag_ss'),\n",
+       " (0.0872946853241854, 'koi_duration_err2'),\n",
+       " (0.07829798779935798, 'koi_duration_err1'),\n",
+       " (0.070643599155488, 'koi_prad_err1'),\n",
+       " (0.06386096031846822, 'koi_prad_err2'),\n",
+       " (0.05453043056622351, 'koi_fpflag_ec')]"
       ]
      },
      "execution_count": 6,
@@ -502,29 +551,84 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "label asignments¶\n",
-    "CANDIDATE: Label = 0\n",
+    "## Making Predictions with new data\n",
+    "<b>Label asignments</b>\n",
+    "* CANDIDATE: Label = 0\n",
+    "* CONFIRMED: Label = 1\n",
+    "* FALSE POSITIVE: Label = 2\n",
     "\n",
-    "CONFIRMED: Label = 1\n",
+    "<b>Test Data was taken from the first row:</b>\n",
+    "* [0, 0, 0, 25.8, 2.83, 0, 0.11600, -0.19, 0.32, -0.11600]\n",
+    "* Correct answer: Class = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1], dtype=int64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# quick test\n",
+    "rf.predict(new_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the model\n",
     "\n",
-    "FALSE POSITIVE: Label = 2"
+    "print(f\"Predicted class: {rf.predict(new_data)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['z_randomForest_model.sav']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " # save your model by updating \"your_name\" with your name\n",
+    "# and \"your_model\" with your model variable\n",
+    "# be sure to turn this in to BCS\n",
+    "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
+    "import joblib\n",
+    "filename = 'z_randomForest_model.sav'\n",
+    "joblib.dump(rf, filename)"
    ]
   },
   {
@@ -536,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +880,7 @@
        "[6991 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +1028,7 @@
        "4           0.996668  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,51 +1059,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8878718535469108"
+       "0.88558352402746"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf = RandomForestClassifier(n_estimators=200)\n",
-    "rf = rf.fit(X_train, y_train)\n",
-    "rf.score(X_test, y_test)"
+    "rfs = RandomForestClassifier(n_estimators=200)\n",
+    "rfs = rf.fit(X_train, y_train)\n",
+    "rfs.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['z_randomForest_model.sav']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    " # save your model by updating \"your_name\" with your name\n",
-    "# and \"your_model\" with your model variable\n",
-    "# be sure to turn this in to BCS\n",
-    "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
-    "import joblib\n",
-    "filename = 'z_randomForest_model.sav'\n",
-    "joblib.dump(rf, filename)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
