--- a/model_1_Random_Forest_Decision_Tree.ipynb
+++ b/model_1_Random_Forest_Decision_Tree.ipynb
@@ -457,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "0.88558352402746"
+       "0.8884439359267735"
       ]
      },
      "execution_count": 5,
@@ -481,12 +481,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Acc: 0.886\n"
+      "Test Acc: 0.888\n"
      ]
     }
    ],
    "source": [
     "print('Test Acc: %.3f' % rf.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 1.0\n",
+      "Testing Data Score: 0.8884439359267735\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Training Data Score: {rf.score(X_train, y_train)}\")\n",
+    "print(f\"Testing Data Score: {rf.score(X_test, y_test)}\")"
    ]
   },
   {
@@ -498,34 +517,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Data Score: 1.0\n",
-      "Testing Data Score: 0.88558352402746\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Training Data Score: {rf.score(X_train, y_train)}\")\n",
-    "print(f\"Testing Data Score: {rf.score(X_test, y_test)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "                precision    recall  f1-score   support\n",
       "\n",
-      "     CANDIDATE       0.81      0.72      0.76       411\n",
-      "     CONFIRMED       0.78      0.83      0.81       484\n",
+      "     CANDIDATE       0.80      0.73      0.77       411\n",
+      "     CONFIRMED       0.79      0.83      0.81       484\n",
       "FALSE POSITIVE       0.98      1.00      0.99       853\n",
       "\n",
       "      accuracy                           0.89      1748\n",
-      "     macro avg       0.86      0.85      0.85      1748\n",
-      "  weighted avg       0.88      0.89      0.88      1748\n",
+      "     macro avg       0.86      0.85      0.86      1748\n",
+      "  weighted avg       0.89      0.89      0.89      1748\n",
       "\n"
      ]
     }
@@ -549,25 +549,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.1582261156584499, 'koi_fpflag_nt'),\n",
-       " (0.15125252057532393, 'koi_fpflag_co'),\n",
-       " (0.12545588976768815, 'koi_model_snr'),\n",
-       " (0.11492148107576854, 'koi_fpflag_ss'),\n",
-       " (0.10252217974821629, 'koi_prad'),\n",
-       " (0.08395451216856603, 'koi_duration_err2'),\n",
-       " (0.07893219725160641, 'koi_duration_err1'),\n",
-       " (0.06661454650613716, 'koi_prad_err1'),\n",
-       " (0.0645623101766463, 'koi_prad_err2'),\n",
-       " (0.0535582470715972, 'koi_fpflag_ec')]"
+       "[(0.15678071531657287, 'koi_fpflag_nt'),\n",
+       " (0.15480896249667905, 'koi_fpflag_co'),\n",
+       " (0.12302187676829335, 'koi_model_snr'),\n",
+       " (0.11263708718021687, 'koi_fpflag_ss'),\n",
+       " (0.09126199709996514, 'koi_prad'),\n",
+       " (0.08573562457240089, 'koi_duration_err1'),\n",
+       " (0.08107513614744108, 'koi_prad_err1'),\n",
+       " (0.08064529572424464, 'koi_duration_err2'),\n",
+       " (0.062245425699740335, 'koi_prad_err2'),\n",
+       " (0.05178787899444572, 'koi_fpflag_ec')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "array([1], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -644,16 +644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['z_randomForest_model.sav']"
+       "['z1_randomForest_model.sav']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'z_randomForest_model.sav'\n",
+    "filename = 'z1_randomForest_model.sav'\n",
     "joblib.dump(rf, filename)"
    ]
   },
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "[6991 rows x 11 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
        "4           0.996668  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,16 +1096,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8861556064073226"
+       "0.8850114416475973"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
      "output_type": "stream",
      "text": [
       "Training Data Score: 1.0\n",
-      "Testing Data Score: 0.8861556064073226\n"
+      "Testing Data Score: 0.8850114416475973\n"
      ]
     }
    ],
